<resources>
    <string name="app_name">Modern EduTech</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="forget_password">Forget Password.</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="send_email">Send Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="principal">Principal</string>
    <string name="college_school">College / School</string>
    <string name="students">Students</string>
    <string name="teachers">Teachers</string>
    <string name="hod_s">HOD\'s</string>
    <string name="guide">guide</string>
    <string name="description">description</string>
    <string name="about_us">About Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="feedback">Feedback</string>
    <string name="school">School</string>
    <string name="college">College</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="name_of_institution">Name of Institution</string>
    <string name="are_you_principal">Are You Principal ?</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="welcome">Welcome</string>
</resources>