<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".Settings.ProfileEditActivity">

    <ImageView
        android:id="@+id/pImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="27dp"
        android:src="@drawable/ic_account_circle"
        android:onClick="setProfilePic"
        app:layout_constraintBottom_toTopOf="@+id/pName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_pic" />

    <EditText
        android:id="@+id/pName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="434dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Mr/Ms" />

    <RadioGroup
        android:id="@+id/toCheckType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="370dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pName">

        <RadioButton
            android:id="@+id/radioSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/school"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="314dp" />

        <RadioButton
            android:id="@+id/radioCollege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="312dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/pInstituteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="302dp"
        android:ems="10"
        android:hint="@string/name_of_institution"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toCheckType"
        android:autofillHints=" " />

    <EditText
        android:id="@+id/pMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="408dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_mobile_number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/toCheckPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="+91" />


    <CheckBox
        android:id="@+id/toCheckPrincipal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="516dp"
        android:layout_marginBottom="271dp"
        android:gravity="center"
        android:text="@string/are_you_principal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="112dp"
        android:background="@color/colorPrimary"
        android:onClick="submit"
        android:padding="5dp"
        android:text="@string/submit"
        android:textColor="#FFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toCheckPrincipal" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginBottom="13dp"
        android:onClick="uploadPic"
        android:text="@string/upload"
        app:layout_constraintBottom_toTopOf="@+id/pName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>